syntax = "proto3";

import "google/protobuf/empty.proto";

import "v1/auth/auth.proto";

option swift_prefix = "";
option java_generic_services = true;
option java_package = "systems.ajax.a911.grpc.auth.v1";

/*
 * Service that provides methods for user authentication.
 */
service AuthService {
    rpc login (LoginRequest) returns (LoginResponse);
    rpc loginIntoCompany (CompanyLoginRequest) returns (LoginResponse);
    rpc loginIntoPersonalAccount (google.protobuf.Empty) returns (LoginResponse);

    rpc logout (google.protobuf.Empty) returns (google.protobuf.Empty);
}
